--- a/ng_PetBoarding_app/src/styles.scss
+++ b/ng_PetBoarding_app/src/styles.scss
@@ -35,3 +35,6 @@ body {
 .card {
   @include card;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
