--- a/ng_PetBoarding_app/src/variables.scss
+++ b/ng_PetBoarding_app/src/variables.scss
@@ -1,12 +1,27 @@
 /* Variables globales SCSS */
 
-// Couleurs
-$primary-color: #3f51b5;
-$secondary-color: #ff4081;
-$background-color: #f5f5f5;
-$text-color: #333;
+// Couleurs Material Design
+$primary-color: #1976d2; // Material Blue
+$primary-light: #42a5f5;
+$primary-dark: #1565c0;
+$secondary-color: #dc004e; // Material Pink
+$secondary-light: #ff5983;
+$secondary-dark: #9a0036;
+
+// Couleurs neutres
+$background-color: #fafafa;
+$surface-color: #ffffff;
+$text-color: #212121;
+$text-secondary: #757575;
+$divider-color: #e0e0e0;
 $white: #ffffff;
 $black: #000000;
+
+// Couleurs d'état
+$success-color: #4caf50;
+$warning-color: #ff9800;
+$error-color: #f44336;
+$info-color: #2196f3;
 
 // Espacements
 $spacing-xs: 0.25rem;
