Ajout d'un layout + rendu responsive

--- a/ng_PetBoarding_app/src/app/app.component.html
+++ b/ng_PetBoarding_app/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- Affichage du composant login -->
-<app-login></app-login>
+<!-- Application avec le nouveau layout -->
+<app-main-layout></app-main-layout>
