--- a/ng_PetBoarding_app/src/app/layouts/main-layout/main-layout.component.html
+++ b/ng_PetBoarding_app/src/app/layouts/main-layout/main-layout.component.html
@@ -267,7 +267,9 @@
             <div class="col-12">
               <hr class="footer-divider" />
               <div class="footer-bottom">
-                <p class="copyright">&copy; {{ currentYear }} PetBoarding. Tous droits réservés.</p>
+                <p class="copyright">
+                  &copy; {{ currentYear() }} PetBoarding. Tous droits réservés.
+                </p>
                 <div class="footer-bottom-links">
                   <a routerLink="/privacy">Politique de confidentialité</a>
                   <a routerLink="/terms">Conditions d'utilisation</a>
