--- a/ng_PetBoarding_app/src/app/components/login/login.component.html
+++ b/ng_PetBoarding_app/src/app/components/login/login.component.html
@@ -32,17 +32,17 @@
           <mat-label>Mot de passe</mat-label>
           <input
             matInput
-            [type]="hidePassword ? 'password' : 'text'"
+            [type]="hidePassword() ? 'password' : 'text'"
             formControlName="password"
             autocomplete="current-password" />
           <button
             mat-icon-button
             matSuffix
             type="button"
-            (click)="hidePassword = !hidePassword"
+            (click)="togglePasswordVisibility()"
             [attr.aria-label]="'Masquer le mot de passe'"
-            [attr.aria-pressed]="hidePassword">
-            <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+            [attr.aria-pressed]="hidePassword()">
+            <mat-icon>{{ hidePassword() ? 'visibility_off' : 'visibility' }}</mat-icon>
           </button>
           @if (loginForm.get('password')?.invalid && loginForm.get('password')?.touched) {
             <mat-error>
