Ajout des prestations

--- a/ng_PetBoarding_app/src/app/layouts/main-layout/main-layout.component.html
+++ b/ng_PetBoarding_app/src/app/layouts/main-layout/main-layout.component.html
@@ -17,9 +17,9 @@
         <mat-icon>home</mat-icon>
         Accueil
       </a>
-      <a routerLink="/services" routerLinkActive="active" mat-button>
+      <a routerLink="/prestations" routerLinkActive="active" mat-button>
         <mat-icon>room_service</mat-icon>
-        Services
+        Prestations
       </a>
       <a routerLink="/reservations" routerLinkActive="active" mat-button>
         <mat-icon>event</mat-icon>
@@ -110,9 +110,9 @@
           <mat-icon>home</mat-icon>
           Accueil
         </a>
-        <a routerLink="/services" routerLinkActive="active" mat-button (click)="toggleSidenav()">
+        <a routerLink="/prestations" routerLinkActive="active" mat-button (click)="toggleSidenav()">
           <mat-icon>room_service</mat-icon>
-          Services
+          Prestations
         </a>
         <a
           routerLink="/reservations"
