Ajout d'un débounce + taille minima lsur le texte de recherche

--- a/ng_PetBoarding_app/src/app/features/prestations/components/prestation-filters.component.html
+++ b/ng_PetBoarding_app/src/app/features/prestations/components/prestation-filters.component.html
@@ -29,7 +29,7 @@
           type="text"
           [value]="searchText()"
           (input)="onSearchChange($event)"
-          placeholder="Nom ou description de la prestation..." />
+          placeholder="Minimum 3 caractères pour rechercher..." />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
     </div>
