--- a/ng_PetBoarding_app/src/app/features/prestations/components/prestations.component.html
+++ b/ng_PetBoarding_app/src/app/features/prestations/components/prestations.component.html
@@ -12,9 +12,9 @@
     </div>
 
     <!-- Filtres de recherche -->
-    <app-prestation-filters />
+    <app-prestation-filters (filtersChanged)="onFiltersChanged($event)" />
 
     <!-- Liste des prestations -->
-    <app-prestations-list />
+    <app-prestations-list [filters]="filters()" />
   </div>
 </div>
